Table Customer {
    customer_id integer [primary key]
    customer_name varchar(50)
    address varchar(100)
    }

Table Order {
    order_id integer [primary key]
    order_date date
    customer_id integer [ref: > Customer.customer_id]
    }

Table Product {
    product_id integer [primary key]
    product_name varchar(50)
    price float
}

Table Order_Detail {
    order_id integer [ref: > Order.order_id]
    product_id integer [ref: > Product.product_id]
    quantity integer
    price float
    indexes {
        (order_id, product_id) [pk] // composite primary key
    }
}